--- a/kitty/_downloads/kitty.conf
+++ b/kitty/_downloads/kitty.conf
@@ -250,6 +250,12 @@ window_margin_width 0.0
 
 #: The window margin (in pts) (blank area outside the border)
 
+single_window_margin_width -1000.0
+
+#: The window margin (in pts) to use when only a single window is
+#: visible. Negative values will cause the value of
+#: window_margin_width to be used instead.
+
 window_padding_width 0.0
 
 #: The window padding (in pts) (blank area between the text and the
@@ -511,9 +517,17 @@ macos_quit_when_last_window_closed no
 #: Keyboard shortcuts {{{
 
 #: For a list of key names, see: GLFW keys
-#: <http://www.glfw.org/docs/latest/group__keys.html> For a list of
-#: modifier names, see: GLFW mods
+#: <http://www.glfw.org/docs/latest/group__keys.html>. The name to use
+#: is the part after the GLFW_KEY_ prefix. For a list of modifier
+#: names, see: GLFW mods
 #: <http://www.glfw.org/docs/latest/group__mods.html>
+
+#: On Linux you can also use XKB key names to bind keys that are not
+#: supported by GLFW. See XKB keys
+#: <https://github.com/xkbcommon/libxkbcommon/blob/master/xkbcommon/xkbcommon-
+#: keysyms.h> for a list of key names. The name to use is the part
+#: after the XKB_KEY_ prefix. Note that you should only use an XKB key
+#: name for keys that are not present in the list of GLFW keys.
 
 #: You can use the special action no_op to unmap a keyboard shortcut
 #: that is assigned in the default configuration.
