--- a/kitty/_downloads/kitty.conf
+++ b/kitty/_downloads/kitty.conf
@@ -246,6 +246,14 @@ window_border_width 1.0
 #: borders are displayed only when more than one window is visible.
 #: They are meant to separate multiple windows.
 
+draw_minimal_borders yes
+
+#: Draw only the minimum borders needed. This means that only the
+#: minimum needed borders for inactive windows are drawn. That is only
+#: the borders that separate the inactive window from a neighbor. Note
+#: that setting a non-zero window margin overrides this and causes all
+#: borders to be drawn.
+
 window_margin_width 0.0
 
 #: The window margin (in pts) (blank area outside the border)
@@ -511,6 +519,11 @@ macos_quit_when_last_window_closed no
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
 #: the expected behavior on macOS.
+
+macos_window_resizable yes
+
+#: Disable this if you want kitty top-level (OS) windows to not be
+#: resizable on macOS.
 
 #: }}}
 
