--- a/kitty/_downloads/kitty.conf
+++ b/kitty/_downloads/kitty.conf
@@ -89,7 +89,10 @@ cursor_stop_blinking_after 15.0
 scrollback_lines 2000
 
 #: Number of lines of history to keep in memory for scrolling back.
-#: Memory is allocated on demand.
+#: Memory is allocated on demand. Negative numbers are (effectively)
+#: infinite scrollback. Note that using very large scrollback is not
+#: recommended a it can slow down resizing of the terminal and also
+#: use large amounts of RAM.
 
 scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 
@@ -561,6 +564,22 @@ macos_window_resizable yes
 #: keysyms.h> for a list of key names. The name to use is the part
 #: after the XKB_KEY_ prefix. Note that you should only use an XKB key
 #: name for keys that are not present in the list of GLFW keys.
+
+#: Finally, you can use raw system key codes to map keys. To see the
+#: system key code for a key, start kitty with the kitty --debug-
+#: keyboard option. Then kitty will output some debug text for every
+#: key event. In that text look for ``native_code`` the value of that
+#: becomes the key name in the shortcut. For example:
+
+#: .. code-block:: none
+
+#:     on_key_input: glfw key: 65 native_code: 0x61 action: PRESS mods: 0x0 text: 'a'
+
+#: Here, the key name for the A key is 0x61 and you can use it with::
+
+#:     map ctrl+0x61 something
+
+#: to map ctrl+a to something.
 
 #: You can use the special action no_op to unmap a keyboard shortcut
 #: that is assigned in the default configuration.
