kitty website updates

--- a/kitty/_downloads/fdd5fc58492b70fe2188716f86e7ff87/kitty.conf
+++ b/kitty/_downloads/fdd5fc58492b70fe2188716f86e7ff87/kitty.conf
@@ -556,6 +556,17 @@ macos_thicken_font 0
 #: 0.75 will result in rendering that looks similar to sub-pixel
 #: antialiasing at common font sizes.
 
+macos_traditional_fullscreen no
+
+#: Use the traditional full-screen transition, that is faster, but
+#: less pretty.
+
+macos_custom_beam_cursor no
+
+#: Enable/disable custom mouse cursor for macOS that is easier to see
+#: on both light and dark backgrounds. WARNING: this might make your
+#: mouse cursor invisible on dual GPU machines.
+
 #: }}}
 
 #: Keyboard shortcuts {{{
@@ -739,7 +750,10 @@ map kitty_mod+alt+t set_tab_title
 
 #: Just as with new_window above, you can also pass the name of
 #: arbitrary commands to run when using new_tab and use
-#: new_tab_with_cwd.
+#: new_tab_with_cwd. Finally, if you want the new tab to open next to
+#: the current tab rather than at the end of the tabs list, use::
+
+#:     map ctrl+t new_tab !neighbor [optional cmd to run]
 #: }}}
 
 #: Layout management {{{
