kitty website updates

--- a/kitty/_downloads/fdd5fc58492b70fe2188716f86e7ff87/kitty.conf
+++ b/kitty/_downloads/fdd5fc58492b70fe2188716f86e7ff87/kitty.conf
@@ -354,6 +354,13 @@ tab_separator " ┇"
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
+tab_title_template {title}
+
+#: A template to render the tab title. The default just renders the
+#: title. If you wish to include the tab-index as well, use something
+#: like: {index}: {title}. Useful if you have shortcuts mapped for
+#: goto_tab N.
+
 active_tab_foreground   #000
 active_tab_background   #eee
 active_tab_font_style   bold-italic
@@ -653,7 +660,12 @@ clear_all_shortcuts no
 
 #: Clipboard {{{
 
-map kitty_mod+c  copy_to_clipboard
+map kitty_mod+c copy_to_clipboard
+
+#: There is also a copy_or_interrupt action that can be optionally
+#: mapped to Ctrl+c. It will copy only if there is a selection and
+#: send an interrupt otherwise.
+
 map kitty_mod+v  paste_from_clipboard
 map kitty_mod+s  paste_from_selection
 map shift+insert paste_from_selection
@@ -778,8 +790,8 @@ map kitty_mod+l next_layout
 
 #: Font sizes {{{
 
-#: You can change the font size for all top-level kitty windows at a
-#: time or only the current one.
+#: You can change the font size for all top-level kitty OS windows at
+#: a time or only the current one.
 
 map kitty_mod+equal     change_font_size all +2.0
 map kitty_mod+minus     change_font_size all -2.0
@@ -789,7 +801,8 @@ map kitty_mod+backspace change_font_size all 0
 
 #:     map kitty_mod+f6 change_font_size all 10.0
 
-#: To setup shortcuts to change only the current window's font size::
+#: To setup shortcuts to change only the current OS window's font
+#: size::
 
 #:     map kitty_mod+f6 change_font_size current 10.0
 #: }}}
