kitty website updates

--- a/kitty/_downloads/9af617374336961a2d79624927eb6a8a/diff.conf
+++ b/kitty/_downloads/9af617374336961a2d79624927eb6a8a/diff.conf
@@ -70,7 +70,7 @@ hunk_bg        #f1f8ff
 
 search_bg #444
 search_fg white
-select_bg #B4D5FE
+select_bg #b4d5fe
 select_fg black
 
 #: Highlighting
