--- a/kitty/_downloads/fdd5fc58492b70fe2188716f86e7ff87/kitty.conf
+++ b/kitty/_downloads/fdd5fc58492b70fe2188716f86e7ff87/kitty.conf
@@ -271,6 +271,10 @@ bell_on_tab yes
 #: windows in the tab and the window is not the currently focused
 #: window
 
+command_on_bell none
+
+#: Program to run when a bell occurs.
+
 #: }}}
 
 #: Window layout {{{
@@ -937,6 +941,7 @@ map kitty_mod+p>h kitten hints --type hash --program -
 #: Miscellaneous {{{
 
 map kitty_mod+f11    toggle_fullscreen
+map kitty_mod+f10    toggle_maximized
 map kitty_mod+u      kitten unicode_input
 map kitty_mod+f2     edit_config_file
 map kitty_mod+escape kitty_shell window
