kitty website updates

--- a/kitty/_downloads/fdd5fc58492b70fe2188716f86e7ff87/kitty.conf
+++ b/kitty/_downloads/fdd5fc58492b70fe2188716f86e7ff87/kitty.conf
@@ -335,6 +335,15 @@ window_padding_width 0.0
 #: The window padding (in pts) (blank area between the text and the
 #: window border)
 
+placement_strategy center
+
+#: When the window size is not an exact multiple of the cell size, the
+#: cell area of the terminal window will have some extra padding on
+#: the sides. You can control how that padding is distributed with
+#: this option. Using a value of center means the cell area will be
+#: placed centrally. A value of top-left means the padding will be on
+#: only the bottom and right edges.
+
 active_border_color #00ff00
 
 #: The color for the border of the active window. Set this to none to
@@ -364,7 +373,7 @@ resize_debounce_time 0.1
 
 #: The time (in seconds) to wait before redrawing the screen when a
 #: resize event is received. On platforms such as macOS, where the
-#: operating system sends event corresponding to the start and end of
+#: operating system sends events corresponding to the start and end of
 #: a resize, this number is ignored.
 
 resize_draw_strategy static
@@ -681,6 +690,12 @@ macos_custom_beam_cursor no
 #: on both light and dark backgrounds. WARNING: this might make your
 #: mouse cursor invisible on dual GPU machines.
 
+linux_display_server auto
+
+#: Choose between Wayland and X11 backends. By default, an appropriate
+#: backend based on the system state is chosen automatically. Set it
+#: to x11 or wayland to force the choice.
+
 #: }}}
 
 #: Keyboard shortcuts {{{
@@ -763,7 +778,9 @@ map kitty_mod+o  pass_selection_to_program
 
 #: You can also pass the contents of the current selection to any
 #: program using pass_selection_to_program. By default, the system's
-#: open program is used, but you can specify your own, for example::
+#: open program is used, but you can specify your own, the selection
+#: will be passed as a command line argument to the program, for
+#: example::
 
 #:     map kitty_mod+o pass_selection_to_program firefox
 
