--- a/kitty/_downloads/fdd5fc58492b70fe2188716f86e7ff87/kitty.conf
+++ b/kitty/_downloads/fdd5fc58492b70fe2188716f86e7ff87/kitty.conf
@@ -199,6 +199,11 @@ rectangle_select_modifiers ctrl+alt
 #: The modifiers to use rectangular selection (i.e. to select text in
 #: a rectangular block with the mouse)
 
+terminal_select_modifiers shift
+
+#: The modifiers to override mouse selection even when a terminal
+#: application has grabbed the mouse
+
 select_by_word_characters :@-./_~?&=%+#
 
 #: Characters considered part of a word when double clicking. In
@@ -216,6 +221,11 @@ focus_follows_mouse no
 #: Set the active window to the window under the mouse when moving the
 #: mouse around
 
+pointer_shape_when_grabbed arrow
+
+#: The shape of the mouse pointer when the program running in the
+#: terminal grabs the mouse.
+
 #: }}}
 
 #: Performance tuning {{{
@@ -227,7 +237,8 @@ repaint_delay 10
 #: The default value yields ~100 FPS which is more than sufficient for
 #: most uses. Note that to actually achieve 100 FPS you have to either
 #: set sync_to_monitor to no or use a monitor with a high refresh
-#: rate.
+#: rate. Also, to minimize latency when there is pending input to be
+#: processed, repaint_delay is ignored.
 
 input_delay 3
 
@@ -836,6 +847,12 @@ map kitty_mod+enter new_window
 
 #:     map ctrl+enter new_window @ some_program
 
+#: You can open a new window next to the currently active window or as
+#: the first window, with::
+
+#:     map ctrl+n new_window !neighbor some_program
+#:     map ctrl+f new_window !first some_program
+
 map kitty_mod+n new_os_window
 map kitty_mod+w close_window
 map kitty_mod+] next_window
@@ -984,7 +1001,7 @@ map kitty_mod+delete clear_terminal reset active
 #:     map kitty_mod+f12 clear_terminal scroll active
 
 #: If you want to operate on all windows instead of just the current
-#: one, use all instead of :italic`active`.
+#: one, use all instead of active.
 
 #: It is also possible to remap Ctrl+L to both scroll the current
 #: screen contents into the scrollback buffer and clear the screen,
