--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -208,7 +208,7 @@ select_by_word_characters :@-./_~?&=%+#
 
 #: Characters considered part of a word when double clicking. In
 #: addition to these characters any character that is marked as an
-#: alpha-numeric character in the unicode database will be matched.
+#: alphanumeric character in the unicode database will be matched.
 
 click_interval -1.0
 
@@ -690,10 +690,14 @@ macos_traditional_fullscreen no
 #: Use the traditional full-screen transition, that is faster, but
 #: less pretty.
 
-macos_show_window_title_in_menubar yes
+macos_show_window_title_in all
 
-#: Show the title of the currently active window in the macOS menu-
-#: bar, making use of otherwise wasted space.
+#: Show or hide the window title in the macOS window or menu-bar. A
+#: value of window will show the title of the currently active window
+#: at the top of the macOS window. A value of menubar will show the
+#: title of the currently active window in the macOS menu-bar, making
+#: use of otherwise wasted space. all will show the title everywhere
+#: and none hides the title in the window and the menu-bar.
 
 macos_custom_beam_cursor no
 
@@ -741,7 +745,9 @@ linux_display_server auto
 #: to map ctrl+a to something.
 
 #: You can use the special action no_op to unmap a keyboard shortcut
-#: that is assigned in the default configuration.
+#: that is assigned in the default configuration::
+
+#:     map kitty_mod+space no_op
 
 #: You can combine multiple actions to be triggered by a single
 #: shortcut, using the syntax below::
