kitty website updates

--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -869,6 +869,11 @@ map kitty_mod+enter new_window
 #:     map ctrl+f new_window !first some_program
 
 map kitty_mod+n new_os_window
+
+#: Works like new_window above, except that it opens a top level OS
+#: kitty window. In particular you can use new_os_window_with_cwd to
+#: open a window with the current working directory.
+
 map kitty_mod+w close_window
 map kitty_mod+] next_window
 map kitty_mod+[ previous_window
