--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -226,7 +226,7 @@ focus_follows_mouse no
 pointer_shape_when_grabbed arrow
 
 #: The shape of the mouse pointer when the program running in the
-#: terminal grabs the mouse.
+#: terminal grabs the mouse. Valid values are: arrow, beam and hand
 
 #: }}}
 
@@ -450,6 +450,11 @@ tab_title_template {title}
 #: like: {index}: {title}. Useful if you have shortcuts mapped for
 #: goto_tab N.
 
+active_tab_title_template none
+
+#: Template to use for active tabs, if not specified falls back to
+#: tab_title_template.
+
 active_tab_foreground   #000
 active_tab_background   #eee
 active_tab_font_style   bold-italic
@@ -458,6 +463,11 @@ inactive_tab_background #999
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
+
+tab_bar_background none
+
+#: Background color for the tab bar. Defaults to using the terminal
+#: background color.
 
 #: }}}
 
