--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -57,7 +57,7 @@ adjust_column_width 0
 #: than 100% to reduce sizes (but this might cause rendering
 #: artifacts).
 
-# symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PowerlineSymbols
+# symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
@@ -155,6 +155,14 @@ cursor_shape block
 
 #: The cursor shape can be one of (block, beam, underline)
 
+cursor_beam_thickness 1.5
+
+#: Defines the thickness of the beam cursor (in pts)
+
+cursor_underline_thickness 2.0
+
+#: Defines the thickness of the underline cursor (in pts)
+
 cursor_blink_interval -1
 
 #: The interval (in seconds) at which to blink the cursor. Set to zero
@@ -240,6 +248,11 @@ open_url_with default
 #: The program with which to open URLs that are clicked on. The
 #: special value default means to use the operating system's default
 #: URL handler.
+
+url_prefixes http https file ftp
+
+#: The set of URL prefixes to look for when detecting a URL under the
+#: mouse cursor.
 
 copy_on_select no
 
@@ -520,7 +533,7 @@ tab_separator " ┇"
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-tab_title_template {title}
+tab_title_template "{title}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -560,8 +573,9 @@ background_opacity 1.0
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
 #: supported by the OS (for instance, when using a compositor under
-#: X11). Note that it only sets the default background color's
-#: opacity. This is so that things like the status bar in vim,
+#: X11). Note that it only sets the background color's opacity in
+#: cells that have the same background color as the default terminal
+#: background. This is so that things like the status bar in vim,
 #: powerline prompts, etc. still look good.  But it means that if you
 #: use a color theme with a background color in your editor, it will
 #: not be rendered as transparent.  Instead you should change the
@@ -573,11 +587,33 @@ background_opacity 1.0
 #: change transparency of windows set dynamic_background_opacity to
 #: yes (this is off by default as it has a performance cost)
 
+background_image none
+
+#: Path to a background image. Must be in PNG format.
+
+background_image_layout tiled
+
+#: Whether to tile or scale the background image.
+
+background_image_linear no
+
+#: When background image is scaled, whether linear interpolation
+#: should be used.
+
 dynamic_background_opacity no
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
 #: decrease_background_opacity) or the remote control facility.
+
+background_tint 0.0
+
+#: How much to tint the background image by the background color. The
+#: tint is applied only under the text area, not margin/borders. Makes
+#: it easier to read the text. Tinting is done using the current
+#: background color for each window. This setting applies only if
+#: background_opacity is set and transparent windows are supported or
+#: background_image is set.
 
 dim_opacity 0.75
 
@@ -835,24 +871,25 @@ linux_display_server auto
 
 #: Keyboard shortcuts {{{
 
-#: For a list of key names, see: GLFW keys
-#: <https://www.glfw.org/docs/latest/group__keys.html>. The name to
-#: use is the part after the GLFW_KEY_ prefix. For a list of modifier
-#: names, see: GLFW mods
+#: For a list of key names, see: the GLFW key macros
+#: <https://github.com/kovidgoyal/kitty/blob/master/glfw/glfw3.h#L349>.
+#: The name to use is the part after the GLFW_KEY_ prefix. For a list
+#: of modifier names, see: GLFW mods
 #: <https://www.glfw.org/docs/latest/group__mods.html>
 
 #: On Linux you can also use XKB key names to bind keys that are not
 #: supported by GLFW. See XKB keys
 #: <https://github.com/xkbcommon/libxkbcommon/blob/master/xkbcommon/xkbcommon-
 #: keysyms.h> for a list of key names. The name to use is the part
-#: after the XKB_KEY_ prefix. Note that you should only use an XKB key
-#: name for keys that are not present in the list of GLFW keys.
+#: after the XKB_KEY_ prefix. Note that you can only use an XKB key
+#: name for keys that are not known as GLFW keys.
 
-#: Finally, you can use raw system key codes to map keys. To see the
-#: system key code for a key, start kitty with the kitty --debug-
-#: keyboard option. Then kitty will output some debug text for every
-#: key event. In that text look for ``native_code`` the value of that
-#: becomes the key name in the shortcut. For example:
+#: Finally, you can use raw system key codes to map keys, again only
+#: for keys that are not known as GLFW keys. To see the system key
+#: code for a key, start kitty with the kitty --debug-keyboard option.
+#: Then kitty will output some debug text for every key event. In that
+#: text look for ``native_code`` the value of that becomes the key
+#: name in the shortcut. For example:
 
 #: .. code-block:: none
 
@@ -915,7 +952,9 @@ map kitty_mod+c copy_to_clipboard
 
 #: There is also a copy_or_interrupt action that can be optionally
 #: mapped to Ctrl+c. It will copy only if there is a selection and
-#: send an interrupt otherwise.
+#: send an interrupt otherwise. Similarly, copy_and_clear_or_interrupt
+#: will copy and clear the selection or send an interrupt if there is
+#: no selection.
 
 map kitty_mod+v  paste_from_clipboard
 map kitty_mod+s  paste_from_selection
