kitty website updates

--- a/kitty/_downloads/a489ebbb52d84eeb19a12b2fda7debda/diff.conf
+++ b/kitty/_downloads/a489ebbb52d84eeb19a12b2fda7debda/diff.conf
@@ -63,6 +63,11 @@ filler_bg #fafbfc
 
 #: Filler (empty) line background
 
+margin_filler_bg none
+
+#: Filler (empty) line background in margins, defaults to the filler
+#: background
+
 hunk_margin_bg #dbedff
 hunk_bg        #f1f8ff
 
