--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -413,20 +413,28 @@ draw_minimal_borders yes
 #: that setting a non-zero window margin overrides this and causes all
 #: borders to be drawn.
 
-window_margin_width 0.0
+window_margin_width 0
 
-#: The window margin (in pts) (blank area outside the border)
+#: The window margin (in pts) (blank area outside the border). A
+#: single value sets all four sides. Two values set the vertical and
+#: horizontal sides. Three values set top, horizontal and bottom. Four
+#: values set top, right, bottom and left.
 
-single_window_margin_width -1000.0
+single_window_margin_width -1
 
 #: The window margin (in pts) to use when only a single window is
 #: visible. Negative values will cause the value of
-#: window_margin_width to be used instead.
+#: window_margin_width to be used instead. A single value sets all
+#: four sides. Two values set the vertical and horizontal sides. Three
+#: values set top, horizontal and bottom. Four values set top, right,
+#: bottom and left.
 
-window_padding_width 0.0
+window_padding_width 0
 
 #: The window padding (in pts) (blank area between the text and the
-#: window border)
+#: window border). A single value sets all four sides. Two values set
+#: the vertical and horizontal sides. Three values set top, horizontal
+#: and bottom. Four values set top, right, bottom and left.
 
 placement_strategy center
 
@@ -740,6 +748,20 @@ allow_remote_control no
 #: option, if you use the value socket-only. The latter is useful if
 #: you want to prevent programs running on a remote computer over ssh
 #: from controlling kitty.
+
+listen_on none
+
+#: Tell kitty to listen to the specified unix/tcp socket for remote
+#: control connections. Note that this will apply to all kitty
+#: instances. It can be overridden by the kitty --listen-on command
+#: line flag. This option accepts only UNIX sockets, such as
+#: unix:${TEMP}/mykitty or (on Linux) unix:@mykitty. Environment
+#: variables are expanded. If {kitty_pid} is present then it is
+#: replaced by the PID of the kitty process, otherwise the PID of the
+#: kitty process is appended to the value, with a hyphen. This option
+#: is ignored unless you also set allow_remote_control to enable
+#: remote control. See the help for kitty --listen-on for more
+#: details.
 
 # env 
 
