--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -286,7 +286,7 @@ terminal_select_modifiers shift
 #: The modifiers to override mouse selection even when a terminal
 #: application has grabbed the mouse
 
-select_by_word_characters :@-./_~?&=%+#
+select_by_word_characters @-./_~?&=%+#
 
 #: Characters considered part of a word when double clicking. In
 #: addition to these characters any character that is marked as an
@@ -546,7 +546,11 @@ tab_title_template "{title}"
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
 #: like: {index}: {title}. Useful if you have shortcuts mapped for
-#: goto_tab N.
+#: goto_tab N. In addition you can use {layout_name} for the current
+#: layout name and {num_windows} for the number of windows in the tab.
+#: Note that formatting is done by Python's string formatting
+#: machinery, so you can use, for instance, {layout_name[:2].upper()}
+#: to show only the first two letters of the layout name, upper-cased.
 
 active_tab_title_template none
 
