--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -263,6 +263,12 @@ url_prefixes http https file ftp
 #: The set of URL prefixes to look for when detecting a URL under the
 #: mouse cursor.
 
+detect_urls yes
+
+#: Detect URLs under the mouse. Detected URLs are highlighted with an
+#: underline and the mouse cursor becomes a hand over them. Even if
+#: this option is disabled, URLs are still clickable.
+
 copy_on_select no
 
 #: Copy to clipboard or a private buffer on select. With this set to
