--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -102,6 +102,10 @@ font_features none
 #: e.g. you can disable a feature in the italic font but not in the
 #: regular font.
 
+#: On Linux, these are read from the FontConfig database first and
+#: then this, setting is applied, so they can be configured in a
+#: single, central place.
+
 #: To get the PostScript name for a font, use kitty + list-fonts
 #: --psnames:
 
@@ -560,7 +564,8 @@ tab_switch_strategy previous
 #: The algorithm to use when switching to a tab when the current tab
 #: is closed. The default of previous will switch to the last used
 #: tab. A value of left will switch to the tab to the left of the
-#: closed tab. A value of last will switch to the right-most tab.
+#: closed tab. A value of right will switch to the tab to the right of
+#: the closed tab. A value of last will switch to the right-most tab.
 
 tab_fade 0.25 0.5 0.75 1
 
@@ -591,6 +596,10 @@ tab_title_template "{title}"
 #: Note that formatting is done by Python's string formatting
 #: machinery, so you can use, for instance, {layout_name[:2].upper()}
 #: to show only the first two letters of the layout name, upper-cased.
+#: If you want to style the text, you can use styling directives, for
+#: example: {fmt.fg.red}red{fmt.fg.default}normal{fmt.bg._00FF00}green
+#: bg{fmt.bg.normal}. Similarly, for bold and italic:
+#: {fmt.bold}bold{fmt.nobold}normal{fmt.italic}italic{fmt.noitalic}.
 
 active_tab_title_template none
 
