kitty website updates

--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -691,9 +691,9 @@ selection_background #fffacd
 #: The background for text selected with the mouse.
 
 
-#: The 16 terminal colors. There are 8 basic colors, each color has a
-#: dull and bright version. You can also set the remaining colors from
-#: the 256 color table as color16 to color255.
+#: The 256 terminal colors. There are 8 basic colors, each color has a
+#: dull and bright version, for the first 16 colors. You can set the
+#: remaining 240 colors as color16 to color255.
 
 color0 #000000
 color8 #767676
@@ -954,10 +954,12 @@ linux_display_server auto
 
 #: Keyboard shortcuts {{{
 
-#: For a list of key names, see: the GLFW key macros
-#: <https://github.com/kovidgoyal/kitty/blob/master/glfw/glfw3.h#L349>.
-#: The name to use is the part after the GLFW_KEY_ prefix. For a list
-#: of modifier names, see: GLFW mods
+#: Keys are identified simply by their lowercase unicode characters.
+#: For example: ``a`` for the A key, ``[`` for the left square bracket
+#: key, etc. For functional keys, such as ``Enter or Escape`` the
+#: names are present at https://sw.kovidgoyal.net/kitty/keyboard-
+#: protocol.html#functional-key-definitions. For a list of modifier
+#: names, see: GLFW mods
 #: <https://www.glfw.org/docs/latest/group__mods.html>
 
 #: On Linux you can also use XKB key names to bind keys that are not
@@ -1181,9 +1183,12 @@ map kitty_mod+l next_layout
 #: You can change the font size for all top-level kitty OS windows at
 #: a time or only the current one.
 
-map kitty_mod+equal     change_font_size all +2.0
-map kitty_mod+minus     change_font_size all -2.0
-map kitty_mod+backspace change_font_size all 0
+map kitty_mod+equal       change_font_size all +2.0
+map kitty_mod+plus        change_font_size all +2.0
+map kitty_mod+kp_add      change_font_size all +2.0
+map kitty_mod+minus       change_font_size all -2.0
+map kitty_mod+kp_subtract change_font_size all -2.0
+map kitty_mod+backspace   change_font_size all 0
 
 #: To setup shortcuts for specific font sizes::
 
