--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -581,6 +581,12 @@ tab_separator " ┇"
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
+tab_powerline_style angled
+
+#: The powerline separator style between tabs in the tab bar when
+#: using powerline as the tab_bar_style, can be one of: angled,
+#: slanted, or round.
+
 tab_activity_symbol none
 
 #: Some text or a unicode symbol to show on the tab if a window in the
