--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -219,6 +219,11 @@ scrollback_pager_history_size 0
 #: unformatted text. A value of zero or less disables this feature.
 #: The maximum allowed size is 4GB.
 
+scrollback_fill_enlarged_window no
+
+#: Fill new space with lines from the scrollback buffer after
+#: enlarging a window.
+
 wheel_scroll_multiplier 5.0
 
 #: Modify the amount scrolled by the mouse wheel. Note this is only
@@ -262,7 +267,7 @@ open_url_with default
 #: special value default means to use the operating system's default
 #: URL handler.
 
-url_prefixes http https file ftp
+url_prefixes http https file ftp gemini irc gopher mailto news git
 
 #: The set of URL prefixes to look for when detecting a URL under the
 #: mouse cursor.
