kitty website updates

--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -923,7 +923,7 @@ macos_option_as_alt no
 
 macos_hide_from_tasks no
 
-#: Hide the kitty window from running tasks (Option+Tab) on macOS.
+#: Hide the kitty window from running tasks (⌘+Tab) on macOS.
 
 macos_quit_when_last_window_closed no
 
