--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -1144,6 +1144,9 @@ linux_display_server auto
 
 #:     map ctrl+f>2 set_font_size 20
 
+#: The full list of actions that can be mapped to key presses is
+#: available here </actions>.
+
 kitty_mod ctrl+shift
 
 #: The value of kitty_mod is used as the modifier for all default
@@ -1334,7 +1337,7 @@ map kitty_mod+backspace change_font_size all 0
 #: external program or insert it into the terminal or copy it to the
 #: clipboard.
 
-map kitty_mod+e kitten hints
+map kitty_mod+e open_url_with_hints
 
 #: Open a currently visible URL using the keyboard. The program used
 #: to open the URL is specified in open_url_with.
