--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -415,7 +415,11 @@ mouse_map ctrl+alt+left triplepress ungrabbed mouse_selection line_from_point
 
 #: Select from the clicked point to the end of the line
 
-mouse_map right               press ungrabbed mouse_selection extend
+mouse_map right press ungrabbed mouse_selection extend
+
+#: If you want only the end of the selection to be moved instead of
+#: the nearest boundary, use move-end instead of extend.
+
 mouse_map shift+middle        release ungrabbed,grabbed paste_selection
 mouse_map shift+left          press ungrabbed,grabbed mouse_selection normal
 mouse_map shift+ctrl+alt+left press ungrabbed,grabbed mouse_selection rectangle
@@ -701,12 +705,14 @@ tab_title_template "{title}"
 #: like: {index}: {title}. Useful if you have shortcuts mapped for
 #: goto_tab N. If you prefer to see the index as a superscript, use
 #: {sup.index}. In addition you can use {layout_name} for the current
-#: layout name and {num_windows} for the number of windows in the tab.
-#: Note that formatting is done by Python's string formatting
-#: machinery, so you can use, for instance, {layout_name[:2].upper()}
-#: to show only the first two letters of the layout name, upper-cased.
-#: If you want to style the text, you can use styling directives, for
-#: example: {fmt.fg.red}red{fmt.fg.default}normal{fmt.bg._00FF00}green
+#: layout name, {num_windows} for the number of windows in the tab and
+#: {num_window_groups} for the number of window groups (not counting
+#: overlay windows) in the tab. Note that formatting is done by
+#: Python's string formatting machinery, so you can use, for instance,
+#: {layout_name[:2].upper()} to show only the first two letters of the
+#: layout name, upper-cased. If you want to style the text, you can
+#: use styling directives, for example:
+#: {fmt.fg.red}red{fmt.fg.default}normal{fmt.bg._00FF00}green
 #: bg{fmt.bg.normal}. Similarly, for bold and italic:
 #: {fmt.bold}bold{fmt.nobold}normal{fmt.italic}italic{fmt.noitalic}.
 
@@ -1310,6 +1316,13 @@ map kitty_mod+l next_layout
 #: Similarly, to switch back to the previous layout::
 
 #:    map ctrl+alt+p last_used_layout
+
+#: There is also a toggle layout function that switches to the named
+#: layout or back to the previous layout if in the named layout.
+#: Useful to temporarily "zoom" the active window by switching to the
+#: stack layout::
+
+#:     map ctrl+alt+z toggle_layout stack
 #: }}}
 
 #: Font sizes {{{
