--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -996,7 +996,14 @@ clipboard_control write-clipboard write-primary
 #: primary read-primary. The default is to allow writing to the
 #: clipboard and primary selection. Note that enabling the read
 #: functionality is a security risk as it means that any program, even
-#: one running on a remote server via SSH can read your clipboard.
+#: one running on a remote server via SSH can read your clipboard. See
+#: also  clipboard_max_size.
+
+clipboard_max_size 64
+
+#: The maximum size (in MB) of data from programs running in kitty
+#: that will be stored for writing to the system clipboard. See also
+#: clipboard_control. A value of zero means no size limit is applied.
 
 allow_hyperlinks yes
 
