kitty website updates

--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -184,7 +184,7 @@ cursor_text_color #111111
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background. Note that if cursor is set to none
-#: then this setting if ignored.
+#: then this setting is ignored.
 
 cursor_shape block
 
@@ -809,7 +809,9 @@ tab_bar_style fade
 #:     A user-supplied Python function called draw_tab is loaded from the file
 #:     tab_bar.py in the kitty config directory. For examples of how to
 #:     write such a function, see the functions named draw_tab_with_* in
-#:     kitty's source code: kitty/tab_bar.py.
+#:     kitty's source code: kitty/tab_bar.py. See also `this discussion
+#:     <https://github.com/kovidgoyal/kitty/discussions/4447>`_ for examples from
+#:     kitty users.
 #: hidden
 #:     The tab bar is hidden. If you use this, you might want to create a
 #:     mapping for the https://sw.kovidgoyal.net/kitty/actions/#select-tab
