kitty website updates

--- a/kitty/_downloads/a489ebbb52d84eeb19a12b2fda7debda/diff.conf
+++ b/kitty/_downloads/a489ebbb52d84eeb19a12b2fda7debda/diff.conf
@@ -4,8 +4,8 @@
 
 syntax_aliases pyj:py pyi:py recipe:py
 
-#: File extension aliases for syntax highlight For example, to syntax
-#: highlight file.xyz as file.abc use a setting of xyz:abc
+#: File extension aliases for syntax highlight. For example, to syntax
+#: highlight file.xyz as file.abc use a setting of xyz:abc.
 
 num_context_lines 3
 
@@ -15,8 +15,8 @@ diff_cmd auto
 
 #: The diff command to use. Must contain the placeholder _CONTEXT_
 #: which will be replaced by the number of lines of context. The
-#: default is to search the system for either git or diff and use
-#: that, if found.
+#: default special value auto is to search the system for either git
+#: or diff and use that, if found.
 
 replace_tab_by \x20\x20\x20\x20
 
