--- a/kitty/_downloads/a489ebbb52d84eeb19a12b2fda7debda/diff.conf
+++ b/kitty/_downloads/a489ebbb52d84eeb19a12b2fda7debda/diff.conf
@@ -22,6 +22,17 @@ replace_tab_by \x20\x20\x20\x20
 
 #: The string to replace tabs with. Default is to use four spaces.
 
+# ignore_name
+
+#: A glob pattern that is matched against only the filename of files
+#: and directories. Matching files and directories are ignored when
+#: scanning the filesystem to look for files to diff. Can be specified
+#: multiple times to use multiple patterns. For example::
+
+#:    ignore_name .git
+#:    ignore_name *~
+#:    ignore_name *.pyc
+
 #: }}}
 
 #: Colors {{{
