--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -237,10 +237,7 @@
 #: background is dark or black if the background is light. The default
 #: value is 0, which means no overriding is performed. Useful when
 #: working with applications that use colors that do not contrast well
-#: with your preferred color scheme. Note that this will not work in
-#: situations where kitty has to render in multiple passes, for
-#: example, when rendering with images under text or with non-opaque
-#: background and images.
+#: with your preferred color scheme.
 
 #: }}}
 
@@ -326,7 +323,7 @@
 #: the scrollback buffer with pager. This separate buffer is not
 #: available for interactive scrolling but will be piped to the pager
 #: program when viewing scrollback buffer in a separate window. The
-#: current implementation stores the data in UTF-8, so approximatively
+#: current implementation stores the data in UTF-8, so approximately
 #: 10000 lines per megabyte at 100 chars per line, for pure ASCII,
 #: unformatted text. A value of zero or less disables this feature.
 #: The maximum allowed size is 4GB. Note that on config reload if this
@@ -840,7 +837,10 @@
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
 #: Whether this works and exactly what effect it has depends on the
 #: window manager/operating system. Note that the effects of changing
-#: this option when reloading config are undefined.
+#: this option when reloading config are undefined. When using
+#: titlebar-only, it is useful to also set window_margin_width and
+#: placement_strategy to prevent the rounded corners from clipping
+#: text.
 
 # window_logo_path none
 
@@ -863,20 +863,18 @@
 #: The amount the logo should be faded into the background. With zero
 #: being fully faded and one being fully opaque.
 
-# resize_debounce_time 0.1
+# resize_debounce_time 0.1 0.5
 
-#: The time to wait before redrawing the screen when a resize event is
-#: received (in seconds). On platforms such as macOS, where the
-#: operating system sends events corresponding to the start and end of
-#: a resize, this number is ignored.
-
-# resize_draw_strategy static
-
-#: Choose how kitty draws a window while a resize is in progress. A
-#: value of static means draw the current window contents, mostly
-#: unchanged. A value of scale means draw the current window contents
-#: scaled. A value of blank means draw a blank window. A value of size
-#: means show the window size in cells.
+#: The time to wait before redrawing the screen during a live resize
+#: of the OS window, when no new resize events have been received,
+#: i.e. when resizing is either paused or finished. On platforms such
+#: as macOS, where the operating system sends events corresponding to
+#: the start and end of a live resize, the second number is used for
+#: redraw-after-pause since kitty can distinguish between a pause and
+#: end of resizing.  On such systems the first number is ignored and
+#: redraw is immediate after end of resize.  On other systems the
+#: first number is used so that kitty is "ready" quickly after the end
+#: of resizing, while not also continuously redrawing, to save energy.
 
 # resize_in_steps no
 
@@ -1016,7 +1014,7 @@
 #: title
 #:     The current tab title.
 #: index
-#:     The tab index useable with goto_tab N goto_tab shortcuts.
+#:     The tab index usable with goto_tab N goto_tab shortcuts.
 #: layout_name
 #:     The current layout name.
 #: num_windows
@@ -1096,11 +1094,26 @@
 #: color in the editor color scheme. Or use the escape codes to set
 #: the terminals default colors in a shell script to launch your
 #: editor. Be aware that using a value less than 1.0 is a (possibly
-#: significant) performance hit. If you want to dynamically change
+#: significant) performance hit. When using a low value for this
+#: setting, it is desirable that you set the background color to a
+#: color the matches the general color of the desktop background, for
+#: best text rendering.  If you want to dynamically change
 #: transparency of windows, set dynamic_background_opacity to yes
 #: (this is off by default as it has a performance cost). Changing
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
+
+# background_blur 0
+
+#: Set to a positive value to enable background blur (blurring of the
+#: visuals behind a transparent window) on platforms that support it.
+#: Only takes effect when background_opacity is less than one. On
+#: macOS, this will also control the blur radius (amount of blurring).
+#: Setting it to too high a value will cause severe performance issues
+#: and/or rendering artifacts. Usually, values up to 64 work well.
+#: Note that this might cause performance issues, depending on how the
+#: platform implements it, so use with care. Currently supported on
+#: macOS and KDE/X11.
 
 # background_image none
 
@@ -1138,7 +1151,7 @@
 #: multiplicative with background_tint, it can be used to lighten the
 #: tint over the window gaps for a *separated* look.
 
-# dim_opacity 0.75
+# dim_opacity 0.4
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
@@ -1553,8 +1566,7 @@
 # macos_window_resizable yes
 
 #: Disable this if you want kitty top-level OS windows to not be
-#: resizable on macOS. Changing this option by reloading the config
-#: will only affect newly created OS windows.
+#: resizable on macOS.
 
 # macos_thicken_font 0
 
