--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -391,7 +391,7 @@
 
 # open_url_with default
 
-#: The program to open clicked URLs. The special value default with
+#: The program to open clicked URLs. The special value default will
 #: first look for any URL handlers defined via the open_actions
 #: <https://sw.kovidgoyal.net/kitty/open_actions/> facility and if non
 #: are found, it will use the Operating System's default URL handler
