kitty website updates

--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -705,6 +705,7 @@
 #: responsiveness, but also increase CPU usage and might cause flicker
 #: in full screen programs that redraw the entire screen on each loop,
 #: because kitty is so fast that partial screen updates will be drawn.
+#: This setting is ignored when the input buffer is almost full.
 
 # sync_to_monitor yes
 
@@ -1465,7 +1466,8 @@
 #: documentation for details. Note that relative paths are interpreted
 #: with respect to the kitty config directory. Environment variables
 #: in the path are expanded. Changing this option by reloading the
-#: config is not supported.
+#: config is not supported. Note that if kitty is invoked with command
+#: line arguments specifying a command to run, this option is ignored.
 
 # clipboard_control write-clipboard write-primary read-clipboard-ask read-primary-ask
 
@@ -2259,7 +2261,7 @@
 # map kitty_mod+p>n kitten hints --type linenum
 
 #::  Select something that looks like filename:linenum and open it in
-#::  vim at the specified line number.
+#::  your default editor at the specified line number.
 
 #: Open the selected hyperlink
 
@@ -2342,8 +2344,10 @@
 #::      map f1 clear_terminal scrollback active
 #::      # Scroll the contents of the screen into the scrollback
 #::      map f1 clear_terminal scroll active
-#::      # Clear everything up to the line with the cursor
+#::      # Clear everything up to the line with the cursor or the start of the current prompt (needs shell integration)
 #::      map f1 clear_terminal to_cursor active
+#::      # Same as above except cleared lines are moved into scrollback
+#::      map f1 clear_terminal to_cursor_scroll active
 
 #::  If you want to operate on all kitty windows instead of just the
 #::  current one, use all instead of active.
@@ -2379,6 +2383,11 @@
 #::      }
 #::      zle -N ctrl_l
 #::      bindkey '^l' ctrl_l
+
+#::  Alternatively, you can just add map ctrl+l clear_terminal
+#::  to_cursor_scroll active to kitty.conf which works with no changes
+#::  to the shell rc files, but only clears up to the prompt, it does
+#::  not clear anytext at the prompt itself.
 
 #: Clear up to cursor line
 
