kitty website updates

--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -26,7 +26,7 @@
 
 # font_size 11.0
 
-#: Font size (in pts)
+#: Font size (in pts).
 
 # force_ltr no
 
@@ -266,7 +266,7 @@
 
 #: The color of text under the cursor. If you want it rendered with
 #: the background color of the cell underneath instead, use the
-#: special keyword: background. Note that if cursor is set to none
+#: special keyword: `background`. Note that if cursor is set to none
 #: then this option is ignored. Note that some themes set this value,
 #: so if you want to override it, place your value after the lines
 #: where the theme file is included.
@@ -631,8 +631,8 @@
 
 #::  Select from the clicked point to the end of the line. If you
 #::  would like to select the word at the point and then extend to the
-#::  rest of the line, change line_from_point to
-#::  word_and_line_from_point.
+#::  rest of the line, change `line_from_point` to
+#::  `word_and_line_from_point`.
 
 #: Extend the current selection
 
@@ -668,8 +668,8 @@
 
 #::  Select from the clicked point to the end of the line even when
 #::  grabbed. If you would like to select the word at the point and
-#::  then extend to the rest of the line, change line_from_point to
-#::  word_and_line_from_point.
+#::  then extend to the rest of the line, change `line_from_point` to
+#::  `word_and_line_from_point`.
 
 #: Extend the current selection even when grabbed
 
@@ -739,7 +739,7 @@
 # window_alert_on_bell yes
 
 #: Request window attention on bell. Makes the dock icon bounce on
-#: macOS or the taskbar flash on linux.
+#: macOS or the taskbar flash on Linux.
 
 # bell_on_tab "🔔 "
 
@@ -763,7 +763,7 @@
 #: Path to a sound file to play as the bell sound. If set to none, the
 #: system default bell sound is used. Must be in a format supported by
 #: the operating systems sound API, such as WAV or OGA on Linux
-#: (libcanberra) or AIFF, MP3 or WAV on macOS (NSSound)
+#: (libcanberra) or AIFF, MP3 or WAV on macOS (NSSound).
 
 # linux_bell_theme __custom
 
