--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -276,7 +276,7 @@
 
 #: Defines the text cursor shape when the OS window is not focused.
 #: The unfocused cursor shape can be one of block, beam, underline,
-#: hollow.
+#: hollow and unchanged (leave the cursor shape as it is).
 
 # cursor_beam_thickness 1.5
 
