kitty website updates

--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -1236,7 +1236,7 @@
 
 #: When the background color matches this color, background_opacity is
 #: applied to it to render it as semi-transparent, just as for colors
-#: matching the background color. Useful in more complex UIs like
+#: matching the main background color. Useful in more complex UIs like
 #: editors where you could want more than a single background color to
 #: be rendered as transparent, for instance, for a cursor highlight
 #: line background. Terminal applications can set this color using The
