kitty website updates

--- a/kitty/_downloads/a489ebbb52d84eeb19a12b2fda7debda/diff.conf
+++ b/kitty/_downloads/a489ebbb52d84eeb19a12b2fda7debda/diff.conf
@@ -44,7 +44,9 @@
 # color_scheme auto
 
 #: Whether to use the light or dark colors. The default of auto means
-#: to follow the parent terminal color scheme.
+#: to follow the parent terminal color scheme. Note that the actual
+#: colors used for dark schemes are set by the dark_* settings below
+#: and the non-prefixed settings are used for light colors.
 
 # pygments_style default
 
@@ -66,10 +68,7 @@
 #: This sets the colors used for dark color schemes, use
 #: pygments_style to change the colors for light color schemes.
 
-# foreground black
-
-#: Basic colors
-
+# foreground      black
 # dark_foreground #f8f8f2
 # background      white
 # dark_background #212830
