--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -179,7 +179,19 @@
 #: form (thin|thick)-(sparse|dense). Thin and thick control the
 #: thickness of the undercurl. Sparse and dense control how often the
 #: curl oscillates. With sparse the curl will peak once per character,
-#: with dense twice.
+#: with dense twice. Changing this option dynamically via reloading
+#: the config or remote control is undefined.
+
+# underline_exclusion 1
+
+#: By default kitty renders gaps in underlines when they overlap with
+#: descenders (the parts of letters below the baseline, such as for y,
+#: q, p etc.). This option controls the thickness of the gaps. It can
+#: be either a unitless number in which case it is a fraction of the
+#: underline thickness as specified in the font or it can have a
+#: suffix of px for pixels or pt for points. Set to zero to disable
+#: the gaps. Changing this option dynamically via reloading the config
+#: or remote control is undefined.
 
 # text_composition_strategy platform
 
@@ -574,9 +586,11 @@
 
 #: The default shape of the mouse pointer.
 
-# pointer_shape_when_dragging beam
+# pointer_shape_when_dragging beam crosshair
 
 #: The default shape of the mouse pointer when dragging across text.
+#: The optional second value sets the shape when dragging in
+#: rectangular selection mode.
 
 #: Mouse actions {{{
 
@@ -1038,9 +1052,10 @@
 #: quit action). Negative values are converted to positive ones,
 #: however, with shell_integration enabled, using negative values
 #: means windows sitting at a shell prompt are not counted, only
-#: windows where some command is currently running. Note that if you
-#: want confirmation when closing individual windows, you can map the
-#: close_window_with_confirmation action.
+#: windows where some command is currently running or is running in
+#: the background. Note that if you want confirmation when closing
+#: individual windows, you can map the close_window_with_confirmation
+#: action.
 
 #: }}}
 
@@ -1241,8 +1256,14 @@
 #: a value less than 1.0 is a (possibly significant) performance hit.
 #: When using a low value for this setting, it is desirable that you
 #: set the background color to a color the matches the general color
-#: of the desktop background, for best text rendering.  If you want to
-#: dynamically change transparency of windows, set
+#: of the desktop background, for best text rendering. Note that to
+#: workaround window managers not doing gamma-corrected blending kitty
+#: makes background_opacity non-linear which means, especially for
+#: light backgrounds you might need to make the value much lower than
+#: you expect to get good results, see 6218
+#: <https://github.com/kovidgoyal/kitty/issues/6218> for details.
+
+#: If you want to dynamically change transparency of windows, set
 #: dynamic_background_opacity to yes (this is off by default as it has
 #: a performance cost). Changing this option when reloading the config
 #: will only work if dynamic_background_opacity was enabled in the
@@ -1708,7 +1729,8 @@
 #: invisible
 #:     Only send a notification when the window both is unfocused and not visible
 #:     to the user, for example, because it is in an inactive tab or its OS window
-#:     is not currently active.
+#:     is not currently visible (on platforms that support OS window visibility querying
+#:     this considers an OS Window visible iff it is active).
 
 #: always
 #:     Always send a notification, regardless of window state.
@@ -2564,7 +2586,7 @@
 #::  Alternatively, you can just add map ctrl+l clear_terminal
 #::  to_cursor_scroll active to kitty.conf which works with no changes
 #::  to the shell rc files, but only clears up to the prompt, it does
-#::  not clear anytext at the prompt itself.
+#::  not clear any text at the prompt itself.
 
 #: Clear to start
 
