kitty website updates

--- a/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
+++ b/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
@@ -517,6 +517,19 @@
 #: programs, including websites open in your browser can read the
 #: contents of the system clipboard.
 
+# clear_selection_on_clipboard_loss no
+
+#: When the contents of the clipboard no longer reflect the current
+#: selection, clear it. This is primarily useful on platforms such as
+#: Linux where selecting text automatically copies it to a special
+#: "primary selection" clipboard or if you have copy_on_select set to
+#: clipboard.
+
+#: Note that on macOS the system does not provide notifications when
+#: the clipboard owner is changed, so there, copying to clipboard in a
+#: non-kitty application will not clear selections even if
+#: copy_on_select is enabled.
+
 # paste_actions quote-urls-at-prompt,confirm
 
 #: A comma separated list of actions to take when pasting text into
@@ -1052,10 +1065,11 @@
 #: quit action). Negative values are converted to positive ones,
 #: however, with shell_integration enabled, using negative values
 #: means windows sitting at a shell prompt are not counted, only
-#: windows where some command is currently running or is running in
-#: the background. Note that if you want confirmation when closing
-#: individual windows, you can map the close_window_with_confirmation
-#: action.
+#: windows where some command is currently running. You can also have
+#: backgrounded jobs prevent closing, by adding count-background to
+#: the setting, for example: -1 count-background. Note that if you
+#: want confirmation when closing individual windows, you can map the
+#: close_window_with_confirmation action.
 
 #: }}}
 
